[package]
name = "livox-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20", features = ["rt-multi-thread", "net", "time", "macros", "parking_lot", "tracing"] }
bytes = "1"
crc = "3.0"
byte_struct = "0.7.1"
paste = "1.0.7"
livox-rs-proc = { path = "../livox-rs-proc" }
nalgebra = "0.31.0"
tokio-stream = "0.1.9"
async-stream = "0.3.3"
tracing = "0.1.35"
