[package]
name = "rdr-livox"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.20", features = ["rt-multi-thread", "net", "time", "macros", "parking_lot", "tracing"] }
livox-rs = { path = "../livox-rs" }
nalgebra = "0.31.0"
tokio-stream = "0.1.9"
async-stream = "0.3.3"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
image = { version = "0.24.2", default-features = false, features = ["bmp"] }
rdr-zeromq= { path = "../../rdr-rs/rdr-zeromq" }
#cam-geom = "0.13.0"
bytes = "1"
#tracing-appender = "0.2.2"
